about to change last carousel

--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -172,7 +172,7 @@
 	  					<li>Ateliers hebdomadaires (initiation à l’anglais, au cirque, …)</li>
 	  				</ul>
 	  			</div>
-	  			<img src="/assets/img/bottom-carousel/visuel_parents.jpg">
+	  			<img src="/assets/img/bottom-carousel/visuel_parents.png">
 	  		</div>
 	  	</div>
 	  	<div id="activity">
