script test active icon

--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -117,6 +117,33 @@
 	  	<img src="/assets/img/trait_titre_1.png">
 	  	<p class="middle-info-p">Kids Attitude développe et exploite une offre multi-services de solutions d’accueil de loisirs sur-mesure pour ses clients.</p>
 	  </div>
+	  	<div class="slider-nav">
+	  		<div class="nav-slide nav-slide1">
+	  			<img id="entr" src="assets/img/bottom-carousel/picto_les_entreprises.png">
+	  			<p>Les entreprises</p>
+	  			<img class="hidden-arrow" src="assets/img/bottom-carousel/fleche1.png">
+	  		</div>
+	  		<div class="nav-slide nav-slide2">
+	  			<img id="com" src="assets/img/bottom-carousel/picto_centres_commerciaux.png">
+	  			<p>Les centres commerciaux</p>
+	  			<img class="hidden-arrow" src="assets/img/bottom-carousel/fleche2.png">
+	  		</div>
+	  		<div class="nav-slide nav-slide3">
+	  			<img id="collec" src="assets/img/bottom-carousel/picto_collectivites.png">
+	  			<p>Les collectivités</p>
+	  			<img class="hidden-arrow" src="assets/img/bottom-carousel/fleche3.png">
+	  		</div>
+	  		<div class="nav-slide nav-slide4">
+	  			<img id="ecoles" src="assets/img/bottom-carousel/picto_ecoles.png">
+	  			<p>Les écoles</p>
+	  			<img class="hidden-arrow" src="assets/img/bottom-carousel/fleche4.png">
+	  		</div>
+	  		<div class="nav-slide nav-slide5">
+	  			<img id="parents" src="assets/img/bottom-carousel/picto_parents.png">
+	  			<p>Les parents</p>
+	  			<img class="hidden-arrow" src="assets/img/bottom-carousel/fleche5.png">
+	  		</div>
+	  	</div>
 	  	<div class="middle-info-carousel">
 	  		<div class="middle-info-slide">
 	  			<div class="middle-info-left">
