third carousel almost finished

--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -15,7 +15,7 @@
 	  		<li class="main-menu"><a href="#about">Qui sommes-nous ?</a></li>
 	  		<li class="main-menu"><a href="#offers">Nos offres</a></li>
 	  		<li class="main-menu"><a href="#contact">Contact</a></li>
-	  		<li class="red-square"><a href="#activity">Réserver une activité</a></li>
+	  		<li><a class="red-square" href="#activity">Réserver une activité</a></li>
 	  	</ul>
 	  </div>
 	  <div class="carousel-top">
@@ -119,29 +119,29 @@
 	  </div>
 	  	<div class="slider-nav">
 	  		<div class="nav-slide nav-slide1">
-	  			<img id="entr" src="assets/img/bottom-carousel/picto_les_entreprises.png">
-	  			<p>Les entreprises</p>
-	  			<img class="hidden-arrow" src="assets/img/bottom-carousel/fleche1.png">
+	  			<div class="nav-slide-icon icon1"></div>
+	  			<p class="icon-p">Les entreprises</p>
+	  			<img class="hidden-arrow arrow1" src="assets/img/bottom-carousel/fleche1.png">
 	  		</div>
 	  		<div class="nav-slide nav-slide2">
-	  			<img id="com" src="assets/img/bottom-carousel/picto_centres_commerciaux.png">
-	  			<p>Les centres commerciaux</p>
-	  			<img class="hidden-arrow" src="assets/img/bottom-carousel/fleche2.png">
+	  			<div class="nav-slide-icon icon2"></div>
+	  			<p class="icon-p">Les centres commerciaux</p>
+	  			<img class="hidden-arrow arrow2" src="assets/img/bottom-carousel/fleche2.png">
 	  		</div>
 	  		<div class="nav-slide nav-slide3">
-	  			<img id="collec" src="assets/img/bottom-carousel/picto_collectivites.png">
-	  			<p>Les collectivités</p>
-	  			<img class="hidden-arrow" src="assets/img/bottom-carousel/fleche3.png">
+	  			<div class="nav-slide-icon icon3"></div>
+	  			<p class="icon-p">Les collectivités</p>
+	  			<img class="hidden-arrow arrow3" src="assets/img/bottom-carousel/fleche3.png">
 	  		</div>
 	  		<div class="nav-slide nav-slide4">
-	  			<img id="ecoles" src="assets/img/bottom-carousel/picto_ecoles.png">
-	  			<p>Les écoles</p>
-	  			<img class="hidden-arrow" src="assets/img/bottom-carousel/fleche4.png">
+	  			<div class="nav-slide-icon icon4"></div>
+	  			<p class="icon-p">Les écoles</p>
+	  			<img class="hidden-arrow arrow2" src="assets/img/bottom-carousel/fleche4.png">
 	  		</div>
 	  		<div class="nav-slide nav-slide5">
-	  			<img id="parents" src="assets/img/bottom-carousel/picto_parents.png">
-	  			<p>Les parents</p>
-	  			<img class="hidden-arrow" src="assets/img/bottom-carousel/fleche5.png">
+	  			<div class="nav-slide-icon icon5"></div>
+	  			<p class="icon-p">Les parents</p>
+	  			<img class="hidden-arrow arrow1" src="assets/img/bottom-carousel/fleche5.png">
 	  		</div>
 	  	</div>
 	  	<div class="middle-info-carousel">
@@ -202,9 +202,9 @@
 	  			<img src="/assets/img/bottom-carousel/visuel_parents.png">
 	  		</div>
 	  	</div>
-	  	<div id="activity">
-	  		<div>Contactez-nous</div>
-	  		<div>Réserver une activité</div>
+	  	<div id="activity" class="interaction-buttons">
+	  		<div class="contact-button"></div>
+	  		<div class="activity-button"></div>
 	  	</div>
 	  </div>
 	  <div id="contact" class="bottom-contact">
