--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
 	font-family: "sf";
-	src: url("/assets/fonts/SanFranciscoText-Regular.otf");
+	src: url("/assets/fonts/Dosis-SemiBold.ttf");
 }
 
 @font-face {
@@ -49,13 +49,17 @@ body {
 	margin: 5px;
 	padding: 10px;
 	float: right;
+	letter-spacing: 1px;
 }
 
 .top-nav a {
-	color: #015078;
 	text-decoration: none;
 	font-family: "sf";
 	font-size: 16px;
+}
+
+.main-menu a {
+	color: #015078;
 }
 
 .top-nav .main-menu a:hover {
@@ -71,11 +75,9 @@ body {
 .red-square {
 	border: 2px solid #D1423D;
 	border-radius: 5px;
-	border-image: 0;
-}
-
-.red-square a {
 	color: #D1423D;
+	margin: 5px;
+	padding: 10px;
 }
 
 .carousel-top, .slick-track, .slick-list, .slick-slide, .slide {
@@ -262,9 +264,10 @@ body {
 	width: 172px;
 	padding: 0;
 	margin: 0;
-	font-family: "sf";
+	font-family: "rale";
 	font-size: 30px;
 	color: #004466;
+	text-align: center;
 }
 
 .top-info-carousel .slick-dots li {
@@ -400,7 +403,6 @@ body {
 
 .middle-info-carousel {
 	background-color: white;
-	margin-top: 40px;
 	border-top: 1px solid #004466;
 	border-bottom: 1px solid #004466;
 }
@@ -420,6 +422,7 @@ body {
 .middle-info-left h1 {
 	font-family: "house";
 	font-size: 24px;
+	font-weight: lighter;
 	color: #D1423D;
 }
 
@@ -449,6 +452,10 @@ body {
 	background-color: silver;
 }
 
+.slider-nav {
+	margin: 10px;
+}
+
 .nav-slide img {
 	margin-right: auto;
 	margin-left: auto;
@@ -458,35 +465,108 @@ body {
 	display: flex;
 	flex-direction: column;
 	text-align: center;
+	width: 174px;
+	height: 140px;
 }
 
-.entr {
-	max-width: 56px;
-	max-height: 65px;
+.nav-slide p {
+	font-family: "sf";
 }
 
-.com {
-	max-width: 47px;
-	max-height: 67px;
+/*entreprises centres-c collec ecoles parents*/
+
+.icon1 {
+	background-image: url("/assets/img/bottom-carousel/picto_entreprises.png");
+	background-repeat: no-repeat;
+	background-position: bottom;
 }
 
-.collec {
-	max-width: 48px;
-	max-height: 62px;
+.slick-current .icon1 {
+	background-image: url("/assets/img/bottom-carousel/picto_entreprises_2.png");
 }
 
-.ecoles {
-	max-width: 67px;
-	max-height: 64px;
+.icon2 {
+	background-image: url("/assets/img/bottom-carousel/picto_centres_commerciaux.png");
+	background-repeat: no-repeat;
+	background-position: bottom;
 }
 
-.parents {
-	max-width: 42px;
-	max-height: 56px;
+.slick-current .icon2 {
+	background-image: url(/assets/img/bottom-carousel/picto_centres_commerciaux_2.png);
+}
+
+.icon3 {
+	background-image: url("/assets/img/bottom-carousel/picto_collectivites.png");
+	background-repeat: no-repeat;
+	background-position: bottom;
+}
+
+.slick-current .icon3 {
+	background-image: url(/assets/img/bottom-carousel/picto_collectivites_2.png);
+}
+
+.icon4 {
+	background-image: url("/assets/img/bottom-carousel/picto_ecoles.png");
+	background-repeat: no-repeat;
+	background-position: bottom;
+}
+
+.slick-current .icon4 {
+	background-image: url(/assets/img/bottom-carousel/picto_ecoles_2.png);
+}
+
+.icon5 {
+	background-image: url("/assets/img/bottom-carousel/picto_parents.png");
+	background-repeat: no-repeat;
+	background-position: bottom;
+}
+
+.slick-current .icon5 {
+	background-image: url(/assets/img/bottom-carousel/picto_parents_2.png);
+}
+
+.nav-slide p {
+	color: #004466;
+}
+
+.slick-current .icon-p {
+	color: #D1423D;
+}
+
+.nav-slide-icon {
+    width: 70px;
+    height: 110px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px;
+    padding-top: 64px;
 }
 
 .hidden-arrow {
 	visibility: hidden;
+}
+
+.slick-current .hidden-arrow {
+	visibility: visible;
+}
+
+.arrow1 {
+	width: 15px;
+	height: 32px;
+}
+
+.arrow2 {
+	width: 10px;
+	height: 28px;
+}
+
+.arrow3 {
+	width: 10px;
+	height: 26px;
+}
+*
+.slick-track {
+	padding-bottom: 30px;
 }
 
 .bottom-illustration {
@@ -495,6 +575,40 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	background-color: grey;
+}
+
+.interaction-buttons {
+	position: relative;
+	display: flex;
+	flex-direction: row;
+	margin-top: -30px;
+	z-index: 1000;
+}
+
+.contact-button {
+	background-image: url("/assets/img/bottom-carousel/btn_contact.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	width: 254px;
+	height: 58px;
+	margin-left: auto;
+}
+
+.contact-button:hover {
+	background-image: url("/assets/img/bottom-carousel/btn_contact_rollover.png");
+}
+
+.activity-button {
+	background-image: url("/assets/img/bottom-carousel/btn_activite.png");
+	background-repeat: no-repeat;
+	background-position: center;
+	width: 268px;
+	height: 58px;
+	margin-right: auto;
+}
+
+.activity-button:hover {
+	background-image: url("/assets/img/bottom-carousel/btn_activite_rollover.png");
 }
 
 .bottom-menu {
