contact box begun

--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -210,9 +210,10 @@
 	  <div id="contact" class="bottom-contact">
 	  	<div class="bottom-contact-left">
 	  		<h1>Contactez-nous</h1>
+	  		<img class="contact-underline" src="assets/img/trait_titre_contact.png">
 	  		<p>Nos solutions sont conçues sur-mesure pour chacun de nos clients.</p>
 			<p>Vous souhaitez évoquer avec nous votre projet ? Partagez vos envies, nous vous recontacterons dans les meilleurs délais.</p>
-			<img src="">
+			<img class="kids_illu" src="assets/img/kids_illu.png">
 	  	</div>
 	  	<div class="bottom-contact-right">
 	  		<div class="write-us">
