--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -447,11 +447,6 @@ body {
 	color: #D1423D;
 }
 
-.bottom-contact {
-	height: 571px;
-	background-color: silver;
-}
-
 .slider-nav {
 	margin: 10px;
 }
@@ -611,6 +606,43 @@ body {
 	background-image: url("/assets/img/bottom-carousel/btn_activite_rollover.png");
 }
 
+.bottom-contact {
+	height: 571px;
+	background-color: #004466;
+}
+
+.bottom-contact-left {
+	padding-left: 128px;
+	padding-top: 68px;
+}
+
+.bottom-contact-left h1 {
+	font-family: "house";
+	font-size: 48px;
+	font-weight: lighter;
+	color: white;
+	margin: 0;
+}
+
+.contact-underline {
+	margin-top: -10px;
+	margin-bottom: 15px;
+}
+
+.bottom-contact-left p {
+	font-family: "rale";
+	font-size: 14px;
+	color: white;
+	font-weight: lighter;
+	margin: 0;
+	width: 525px;
+	letter-spacing: 1px;
+}
+
+.bottom-contact-left p:nth-child(2n) {
+	margin-bottom: 81px;
+}
+
 .bottom-menu {
 	margin-left: auto;
 	margin-right: auto;
@@ -622,3 +654,4 @@ body {
 	width: 100%;
 	background-image: url("/assets/img/footer.jpg");
 }
+
