dekstop version finished

--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -12,9 +12,9 @@
 	  <div class="top-nav">
 	  	<div class="logo"><img src="assets/img/logo.png"></div>
 	  	<ul>
-	  		<li class="main-menu"><a href="#about">Qui sommes-nous ?</a></li>
-	  		<li class="main-menu"><a href="#offers">Nos offres</a></li>
-	  		<li class="main-menu"><a href="#contact">Contact</a></li>
+	  		<li class="main-menu"><a href="#about">Qui sommes-nous ?</a><img class="underline-main main1" src="assets/img/traits-menu.png"></li>
+	  		<li class="main-menu"><a href="#offers">Nos offres</a><img class="underline-main main2" src="assets/img/traits-menu.png"></li>
+	  		<li class="main-menu"><a href="#contact">Contact</a><img class="underline-main main3" src="assets/img/traits-menu.png"></li>
 	  		<li><a class="red-square" href="#activity">Réserver une activité</a></li>
 	  	</ul>
 	  </div>
@@ -56,6 +56,7 @@
 	  	</div>
 	  </div>
 	  <div class="top-info">
+	  	<div class="slider-top-nav"></div>
 	  	<div id="about" class="top-info-static">
 	  		<h1>Kids attitude, spécialiste des activités</h1>
 	  		<h1>ludo-éducatives pour les enfants de 4 à 12 ans</h1>
@@ -63,7 +64,23 @@
 	  		<p>Kids Attitude est l'un des premiers gestionnaires d'espaces de loisirs pour les entreprises et centres commerciaux. Nous développons également des services d'accompagnement des collectivités et écoles dans leurs activités péri et extrascolaires.</p>
 	  	</div>
 	  	<div class="top-carousel-container">
-	  		<img src="">
+	  		<div class="slider-nav-top">
+				<div class="nav-top-slider">
+					<p>Nos métiers</p>
+					<img src="assets/img/separateur.png"></div>
+				<div class="nav-top-slider">
+					<p>Notre pédagogie</p>
+					<img src="assets/img/separateur.png"></div>
+				<div class="nav-top-slider">
+					<p>Nos équipes</p>
+					<img src="assets/img/separateur.png"></div>
+				<div class="nav-top-slider">
+					<p>Nos espaces</p>
+					<img src="assets/img/separateur.png"></div>
+				<div class="nav-top-slider">
+					<p>Groupe Sodexo</p>
+					</div>
+	  		</div>
 	  		<div class="top-info-carousel">
 	  			<div class="top-info-slide">
 	  				<img src="assets/img/middle-carousel/visuel_nos_metiers.jpg">
@@ -99,7 +116,7 @@
 	  				</ul>
 	  			</div>
 	  			<div class="top-info-slide">
-	  				<img src="assets/img/middle-carousel/logo_sodexo.png">
+	  				<div class="sodexo"><img src="assets/img/middle-carousel/logo_sodexo.png"><p>Kids Attitude appartient au Groupe Sodexo, leader mondial des services de Qualité de Vie dans 3 domaines :</p></div>
 	  				<ul class="custom-list">
 	  					<li><h1>Services sur site :</h1>
 	  					<p>(Restauration, accueil, propreté, espace verts, maintenance, ...)</p></li>
@@ -217,12 +234,13 @@
 	  	</div>
 	  	<div class="bottom-contact-right">
 	  		<div class="write-us">
-	  			<i class="fa fa-pencil" aria-hidden="true"></i>Écrivez-nous
+	  		<img class="illu" src="assets/img/illustrations_2.png">
+	  		<div class="write-us-button"></div>
 	  		</div>
 	  	</div>
 	  </div>
 	  <div class="bottom-illustration">
-	  		
+	  		<img src="assets/img/kids_illus_2016_baseline_graine.png">
 	  </div>
 	  <div class="bottom-menu">
 	  	<p><a href="{{ path('mentions') }}">Mentions légales</a> | <a href="{{ path('credits') }}">Crédits</a></p>
