--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -3,8 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title></title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -19,35 +21,35 @@
 	  	</ul>
 	  </div>
 	  <div class="carousel-top">
-	  	<div class="slide">
+	  	<div class="slide slide1">
 	  	<img src="assets/img/top-carousel/visuel_1.jpg">
 	  		<div class="slide-son slide-son-1">
 	  			<h1>Pour les Entreprises</h1>
 	  			<p>Nos solutions sur-mesure pour simplifier le quotidien de vos salariés-parents : Journées parentalité, stages vacances,…</p>
 	  		</div>
 	  	</div>
-	  	<div class="slide">
+	  	<div class="slide slide2">
 	  	<img src="assets/img/top-carousel/visuel_2.jpg">
 	  		<div class="slide-son slide-son-2">
 	  			<h1>Pour les Centres Commerciaux</h1>
 	  			<p>Nos espaces enfants pour permettre à vos clients de shopper librement : animations permanentes ou évènementielles.</p>
 	  		</div>
 	  	</div>
-	  	<div class="slide">
+	  	<div class="slide slide3">
 	  	<img src="assets/img/top-carousel/visuel_3.jpg">
 	  		<div class="slide-son slide-son-3">
 	  			<h1>Pour les Collectivités</h1>
 	  			<p>Nos solutions d’accompagnement pour la gestion de vos activités péri et extrascolaires : recrutement, audit, coordination pédagogique,…</p>
 	  		</div>
 	  	</div>
-	  	<div class="slide">
+	  	<div class="slide slide4">
 	  	<img src="assets/img/top-carousel/visuel_4.jpg">
 	  		<div class="slide-son slide-son-4">
 	  			<h1>Pour les Écoles</h1>
 	  			<p>Nos ateliers ludo-éducatifs pour compléter votre offre périscolaire : Théâtre, Autour de l’alimentation, Les petits scientifiques,…</p>
 	  		</div>
 	  	</div>
-	  	<div class="slide">
+	  	<div class="slide slide5">
 	  	<img src="assets/img/top-carousel/visuel_5.jpg">
 	  		<div class="slide-son slide-son-5">
 	  			<h1>Pour les Parents</h1>
