--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -62,7 +62,8 @@
 	  	<div id="about" class="top-info-static">
 	  		<h1>Kids attitude, spécialiste des activités</h1>
 	  		<h1>ludo-éducatives pour les enfants de 4 à 12 ans</h1>
-	  		<img src="assets/img/trait_titre_1.png">
+	  		<img class="splitter1" src="assets/img/trait_titre_1.png">
+	  		<img class="splitter2" src="assets/img/responsive/trait_titre_thick.png">
 	  		<p>Kids Attitude est l'un des premiers gestionnaires d'espaces de loisirs pour les entreprises et centres commerciaux. Nous développons également des services d'accompagnement des collectivités et écoles dans leurs activités péri et extrascolaires.</p>
 	  	</div>
 	  	<div class="top-carousel-container">
