responsive almost done

--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -128,7 +128,6 @@
 	  				</ul>
 	  			</div>
 	  		</div>
-	  		<img src="">
 	  	</div>
 	  </div>
 	  <div id="offers" class="middle-info">
@@ -229,10 +228,11 @@
 	  </div>
 	  <div id="contact" class="bottom-contact">
 	  	<div class="bottom-contact-left">
+	  		<img class="kids_illu_2" src="assets/img/responsive/kids_illu_2.png">
 	  		<h1>Contactez-nous</h1>
 	  		<img class="contact-underline" src="assets/img/trait_titre_contact.png">
 	  		<p>Nos solutions sont conçues sur-mesure pour chacun de nos clients.</p>
-			<p>Vous souhaitez évoquer avec nous votre projet ? Partagez vos envies, nous vous recontacterons dans les meilleurs délais.</p>
+			<p class="p-margin">Vous souhaitez évoquer avec nous votre projet ? Partagez vos envies, nous vous recontacterons dans les meilleurs délais.</p>
 			<img class="kids_illu" src="assets/img/kids_illu.png">
 	  	</div>
 	  	<div class="bottom-contact-right">
@@ -243,7 +243,8 @@
 	  	</div>
 	  </div>
 	  <div class="bottom-illustration">
-	  		<img src="assets/img/kids_illus_2016_baseline_graine.png">
+	  		<img class="bottom-illu" src="assets/img/kids_illus_2016_baseline_graine.png">
+	  		<img class="bottom-illu-2" src="assets/img/responsive/bottom-illu-2.png">
 	  </div>
 	  <div class="bottom-menu">
 	  	<p><a href="{{ path('mentions') }}">Mentions légales</a> | <a href="{{ path('credits') }}">Crédits</a></p>
