sliders as select

--- a/app/Resources/views/kidz/home.html.twig
+++ b/app/Resources/views/kidz/home.html.twig
@@ -82,8 +82,15 @@
 					<img src="assets/img/separateur.png"></div>
 				<div class="nav-top-slider">
 					<p>Groupe Sodexo</p>
-					</div>
+				</div>
 	  		</div>
+	  		<select class="slider-nav-top-2" id="select1" >
+				<option value="Nos métiers">Nos métiers</option>		
+				<option value="Notre pédagogie">Notre pédagogie</option>
+				<option value="Nos équipes">Nos équipes</option>
+				<option value="Nos espaces">Nos espaces</option>
+				<option value="Groupe Sodexo">Groupe Sodexo</option>
+	  		</select>
 	  		<div class="top-info-carousel">
 	  			<div class="top-info-slide">
 	  				<img src="assets/img/middle-carousel/visuel_nos_metiers.jpg">
@@ -163,6 +170,13 @@
 	  			<img class="hidden-arrow arrow1" src="assets/img/bottom-carousel/fleche5.png">
 	  		</div>
 	  	</div>
+	  	<select class="slider-nav-2">
+	  		<option value="Les entreprises">Les entreprises</option>
+	  		<option value="Les centres commerciaux">Les centres commerciaux</option>
+	  		<option value="Les collectivités">Les collectivités</option>
+	  		<option value="Les écoles">Les écoles</option>
+	  		<option value="Les parents">Les parents</option>
+	  	</select>
 	  	<div class="middle-info-carousel">
 	  		<div class="middle-info-slide">
 	  			<div class="middle-info-left">
